<resources>
    <string name="app_name">Project</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="confirm">Confirm</string>
    <string name="etHintPopUp">$</string>
    <string name="returnButton">Return</string>
    <string name="transaction">Transaction</string>
    <string name="confirmation">Confirmation</string>
    <string name="amount">Amount</string>
    <string name="fintrack">FinTrack</string>
    <string name="summary">Summary</string>
    <string name="logging">Logging</string>
    <string name="planning">Planning</string>
    <string name="setting">Setting</string>
    <string name="dashboard">Dashboard</string>
    <string name="items">Items:</string>
    <string name="money_hkd">Money/HKD($)</string>
    <string name="total_income">- Total income</string>
    <string name="total_expenses">- Total expenses</string>
    <string name="net_income">- Net income</string>
    <string name="saving_goal">- Saving goal</string>
    <string name="expense_limit">- Expense limit</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="manage_category">Manage Category</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="income_or_expense_category_name">income or expense category name</string>
    <string name="category_name">category name</string>
    <string name="add_to_income">Add to Income</string>
    <string name="add_to_expense">Add to Expense</string>
    <string name="delete_income">Delete Income</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="to_yearly_report">To yearly report</string>
    <string name="to_monthly_report">To monthly report</string>
    <string name="delete">Delete</string>

    <string-array name="dashboardSpinnerOptions">
        <item>@string/daily</item>
        <item>@string/monthly</item>
        <item>@string/yearly</item>
    </string-array>
    <string-array name="reportSpinnerOptions">
        <item>@string/monthly</item>
        <item>@string/yearly</item>
    </string-array>

    <string name="link">
        Forgot your password? \n <a href="juliusccj2@gmail.com"> Click here </a> to seek help.
    </string>
    <string name="Register">
        New one? Register here.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>