<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingManageCategoryActivity">

    <ImageButton
        android:id="@+id/setting_manageCategory_button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ScrollView
        android:id="@+id/setting_manageCategory_svIncomeList"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/setting_manageCategory_llIncomeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ScrollView
        android:id="@+id/setting_manageCategory_svExpenseList"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/setting_manageCategory_llExpenseList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/setting_manageCategory_incomeListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/income"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setting_manageCategory_expenseListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setting_manageCategory_tilCategoryName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_manageCategory_tietCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/setting_manageCategory_button_addIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="470dp"
        android:text="@string/add_to_income"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setting_manageCategory_button_addExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="25dp"
        android:text="@string/add_to_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setting_manageCategory_button_deleteIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="540dp"
        android:text="@string/delete_income"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setting_manageCategory_button_deleteExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="25dp"
        android:text="@string/delete_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setting_manageCategory_warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:text=""
        android:textColor="#EB2D0B"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setting_manageCategory_resetDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="670dp"
        android:text="@string/reset_to_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>