<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_logging"
    android:layout_width="350dp"
    android:layout_height="500dp"
    android:background="#ABAEB0"
    tools:context=".LoggingPopUp">

    <TextView
        android:id="@+id/popup_logging_textView_transaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#8C8F91"
        android:text="@string/transaction"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/popup_logging_radioGroup_transactionTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_logging_textView_transaction">

        <RadioButton
            android:id="@+id/popup_logging_radioButton_income"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/popup_logging_radioButton_expense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/expense" />
    </RadioGroup>

    <HorizontalScrollView
        android:id="@+id/popup_logging_horizontalScrollView_categories"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_logging_radioGroup_transactionTypes">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/popup_logging_chipGroup_categories"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            app:chipSpacingHorizontal="25dp"
            app:singleLine="true"
            app:singleSelection="true"></com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/popup_logging_editTextDecimal_inputPrice"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/etHintPopUp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_logging_horizontalScrollView_categories" />

    <Button
        android:id="@+id/popup_logging_button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintStart_toStartOf="@+id/popup_logging_editTextDecimal_inputPrice"
        app:layout_constraintTop_toBottomOf="@+id/popup_logging_editTextDecimal_inputPrice" />

    <Button
        android:id="@+id/popup_logging_button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnButton"
        app:layout_constraintEnd_toEndOf="@+id/popup_logging_editTextDecimal_inputPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/popup_logging_button_confirm"
        app:layout_constraintTop_toBottomOf="@+id/popup_logging_editTextDecimal_inputPrice" />

    <TextView
        android:id="@+id/popup_logging_textView_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:textColor="#EB2D0B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popup_logging_textView_transaction" />

</androidx.constraintlayout.widget.ConstraintLayout>